--- a/app/src/main/res/layout/view_floating.xml
+++ b/app/src/main/res/layout/view_floating.xml
@@ -1,11 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content">
+    android:id="@+id/fl"
+    android:layout_width="128dp"
+    android:layout_height="128dp">
 
     <ImageView
-        android:layout_width="56dp"
-        android:layout_height="56dp"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         app:srcCompat="@drawable/ic_telegram" />
 </FrameLayout>
